--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@types/koa-router": "^7.4.5",
+    "crypto-js": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "prisma": "^5.3.1"
   },
   "devDependencies": {
-    "@types/koa": "^2.13.9"
+    "@types/crypto-js": "^4.1.2",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/koa": "^2.13.9",
+    "@types/koa-bodyparser": "^4.3.10"
   }
 }
